--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,6 +13,9 @@ jobs:
       ANDROID_API: 33
       ANDROID_BUILD_TOOLS: 33.0.2
     steps:
+      - name: Install Python requirements
+        run: pip install kivy requests TTS
+
       - name: Checkout Repository
         uses: actions/checkout@v3
 
